--- a/client/static/css/chat.css
+++ b/client/static/css/chat.css
@@ -66,3 +66,15 @@ body {
     background-color: rgb(0, 176, 246);
     cursor: pointer;
   }
+
+.change_room {
+	margin-top: 6vh;
+	margin-left: 45vw;	
+	width: 10vw;
+	height: 5vh;
+    background-color: rgb(66, 196, 247);
+    border: none;
+    border-radius: 3px;
+    color: #fff;
+    font-size: 16px;
+}
